# semantic_segmentation_tpu

./: .rosinstall  CMakeLists.txt  CMakeLists.txt~  README.md  README.md~  package.xml  package.xml~
launch/: semantic_segmentation.launch  semantic_segmentation.launch~
scripts/: semantic_segmentation_tpu.py  semantic_segmentation_tpu.py~
