<?xml version="1.0"?>
<package format="2">
  <name>semantic_segmentation_tpu</name>
  <version>0.0.0</version>
  <description>The semantic_segmentation package</description>

  <maintainer email="himlen@todo.todo">himlen</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
